# Progetto-Finale

./: README.md
travel-agent-api/: .env.example  README.md  pyproject.toml
travel-agent-api/travel_agent_api/: main.py
travel-agent-api/travel_agent_api/routes/: chat_router.py
travel-agent-api/travel_agent_api/services/: agent_service.py
travel-agent-api/travel_agent_api/tools/: chain_historical_expert.py  chain_travel_plan.py  flights_finder.py  hotels_finder.py
web_TravelAgent/: composer.json  package-lock.json  package.json
web_TravelAgent/app/Http/Controllers/: ChatController.php
web_TravelAgent/app/Livewire/: Chatbot.php
web_TravelAgent/resources/views/components/: layout.blade.php  sidebar.blade.php
web_TravelAgent/resources/views/livewire/: chatbot.blade.php
web_TravelAgent/routes/: web.php
