[project]
name = "travel-agent-api"
version = "0.1.0"
description = ""
authors = [
    {name = "Carmine Pistone", email = "carmine.pistone.apostoli@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.10,<4.0"
dependencies = [
    "fastapi>=0.115.0,<0.116.0",
    "uvicorn>=0.32.0,<0.33.0",
    "openai>=1.50.0,<2.0.0",
    "langchain-openai>=0.2.0,<0.3.0",
    "langchain-community>=0.3.0,<0.4.0",
    "langgraph>=0.2.0,<0.3.0",
    "pydantic>=2.9.0,<3.0.0",
    "python-dotenv>=1.0.0,<2.0.0",
    "google-search-results>=2.4.2,<3.0.0",
    "langchain>=0.3.0,<0.4.0",
    "langchain-core>=0.3.0,<0.4.0",
]
 
[tool.poetry]
package-mode = false
 
[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
 
